--- a/rpi/Dockerfile
+++ b/rpi/Dockerfile
@@ -1,5 +1,5 @@
-# Dockerfile to compile Hyperion for Raspberry Pi with Docker as cross compilation through qemu
-# You can start this container also with bash access: sudo docker run -it --entrypoint=/usr/bin/qemu-arm-static hyperionorg/hyperion-ci:rpistretch /bin/bash
+# Base image to compile Hyperion for Raspberry Pi (Raspbian Stretch) with Docker as cross compilation through qemu
+# You can start this container also with bash access: sudo docker run -it hyperionorg/hyperion-ci:rpistretch /bin/bash
 
 FROM resin/rpi-raspbian:stretch
 
@@ -16,3 +16,6 @@ RUN [ "cross-build-start" ]
 RUN apt-get update && apt-get install -y git cmake python3-dev qtbase5-dev libqt5serialport5-dev build-essential libusb-1.0-0-dev libavahi-core-dev libavahi-compat-libdnssd-dev zlib1g-dev libraspberrypi-dev
 
 RUN [ "cross-build-end" ]
+
+# we use always qemu
+ENTRYPOINT ["/usr/bin/qemu-arm-static"]
